src-ken&y/objects/Customer__c.object
<CustomObject>
    <customHelpPage>HelpCustomers</customHelpPage>
    <description>Information that relates a Customer business to the manufacturing company (Company) and describes the business agreement between the two entities.</description>
    <fields>
        <fullName>Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Address</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customers</relationshipLabel>
        <relationshipName>Customers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Aggregate_Shipments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, shipments will not be created when you release the sales orders for this customer. Instead, use the aggregation screen to create shipments.</description>
        <label>Aggregate Shipments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Aliases__c</fullName>
        <label>Aliases</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Average_Days_To_Pay_30__c</fullName>
        <description>past 30 days, average DTP, used in cash forecasting</description>
        <inlineHelpText>Used in cash forecasting, the average days to pay is calculated over the past 30 days.</inlineHelpText>
        <label>Average Days To Pay 30</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bank_Account_Name__c</fullName>
        <description>Customer bank account name</description>
        <label>Bank Account Name</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Account_Number__c</fullName>
        <description>Customer&apos;s bank account number</description>
        <label>Bank Account Number</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_Job_ID__c</fullName>
        <label>Batch Job ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Hours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Hours</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipName>Customers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRM_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CRM Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customers (CRM Account)</relationshipLabel>
        <relationshipName>Customers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <formula>If(ISBLANK(Customer_Street__c)&amp;&amp; !ISBLANK(Address__c) , Address__r.BillingCity, Customer_City__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claims_Correspondent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The claims correspondent responsible for this customer.</description>
        <inlineHelpText>The claims correspondent responsible for this customer.</inlineHelpText>
        <label>Claims Correspondent</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company_Identifier__c</fullName>
        <description>allow data loads to locate the correct company</description>
        <label>Company Identifier</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The company that originates and owns the customer relationship</description>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Customers</relationshipLabel>
        <relationshipName>Customers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <formula>If(ISBLANK(Customer_Street__c)&amp;&amp; !ISBLANK(Address__c) , Address__r.BillingCountry, Customer_Country__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Hold__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked to indicate that the current outstanding balance or days past due is outside established credit policy</description>
        <inlineHelpText>If selected,  the outstanding balance, or days past due, is outside the credit policy for the selected customer.</inlineHelpText>
        <label>Credit Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_Limit__c</fullName>
        <description>Credit limit you set for the top parent customer; if the field is null, there is no limit</description>
        <inlineHelpText>Credit limit  set for the top parent customer. If a value is not specified, there is no limit.</inlineHelpText>
        <label>Credit Limit</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Currency</label>
        <referenceTo>Currency__c</referenceTo>
        <relationshipLabel>Customers</relationshipLabel>
        <relationshipName>Customers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Balance__c</fullName>
        <label>Current Balance</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_City__c</fullName>
        <label>Customer City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Country__c</fullName>
        <label>Customer Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Group</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>Customer Company doesn&apos;t match Customer Group Company</errorMessage>
            <filterItems>
                <field>$Source.Company__c</field>
                <operation>equals</operation>
                <valueField>Customer_Group__c.Company__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.Company__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Customer_Group__c</referenceTo>
        <relationshipLabel>Customers</relationshipLabel>
        <relationshipName>Customers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Hierarchy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Points to the Customer hierarchy level of the financial hierarchy</description>
        <label>Customer Hierarchy</label>
        <referenceTo>Hierarchy__c</referenceTo>
        <relationshipLabel>Customers Hierarchies</relationshipLabel>
        <relationshipName>Customer_Hierarchies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Identifier__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Unique identifier from an external system</description>
        <externalId>true</externalId>
        <inlineHelpText>A unique identifier (number). Each customer record can be recorded with a name and number. Both can be displayed on invoices, receipt and claim documents.</inlineHelpText>
        <label>Customer Identifier</label>
        <length>160</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Customer_State__c</fullName>
        <label>Customer State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Street_1__c</fullName>
        <label>Customer Street 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Street_2__c</fullName>
        <label>Customer Street 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Street__c</fullName>
        <label>Customer Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Unique__c</fullName>
        <description>Customer plus company plus record type ID unique check</description>
        <inlineHelpText>Each customer record can be recorded with a name and number. Both can be displayed on invoices, receipt and claim documents.</inlineHelpText>
        <label>Customer Unique</label>
        <length>240</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Customer_Zip_Code__c</fullName>
        <label>Customer Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DUNS_Number__c</fullName>
        <description>D-U-N-S Number, a unique nine digit identification number, for each physical location of your business</description>
        <inlineHelpText>A unique nine-digit ID for the customer&apos;s physical location.</inlineHelpText>
        <label>DUNS Number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_Past_Due_Max__c</fullName>
        <description>Calculates max of days past due across all customer invoices for this parent customer</description>
        <inlineHelpText>Displays the maximum number of days past due for all customer invoices for this parent customer.</inlineHelpText>
        <label>Days Past Due Max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Default_Bill_To_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Bill To Customer</label>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>Customers (Default Bill To Customer)</relationshipLabel>
        <relationshipName>Bill_To_Customers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Earliest_Delivery_Window__c</fullName>
        <description>The window (In Days) in which the shipment can be delivered earlier than the requested delivery date for the customer.</description>
        <inlineHelpText>The number of days earlier than the requested delivery date that the order can be delivered.</inlineHelpText>
        <label>Earliest Delivery Window (In Days)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Frequency_Number__c</fullName>
        <label>Frequency Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Frequency_Period__c</fullName>
        <label>Frequency Period</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>Week</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Quarter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fuel_Preference__c</fullName>
        <label>Fuel Preference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fullfillment_Priority__c</fullName>
        <description>Priority at which the sales orders for this customer will be allocated, one is the highest.</description>
        <inlineHelpText>Priority allocation for the selected customer&apos;s sales orders. One  is the highest.</inlineHelpText>
        <label>Fullfillment Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_Method__c</fullName>
        <label>Invoice Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
                <value>
                    <fullName>EDI</fullName>
                </value>
                <value>
                    <fullName>cXML</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_Delivery_Window__c</fullName>
        <description>The window (In Days) in which the shipment can be delivered after the requested delivery date.</description>
        <inlineHelpText>The number of days later than the requested delivery date that the order can be delivered.</inlineHelpText>
        <label>Latest Delivery Window (Days)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Time__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Lead time for the customer - the minimum number of days</description>
        <label>Lead Time (Days)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Make_Order_Quantity_Even_With_Factor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked Order quantities will be rounded up or down to be even with factor (Paller/Layer)</description>
        <inlineHelpText>If selected, order quantities are rounded up or down based on the specified order quantity for the pallet/layer. Go to the Product page to manage the order quantity settings.</inlineHelpText>
        <label>Round Order Quantity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Minimum_Shelf_Life_In_Days__c</fullName>
        <description>The minimum shelf life (in days) required for the products being shipped to this customer.</description>
        <inlineHelpText>The minimum shelf life (in days) required for the products being shipped to this customer.</inlineHelpText>
        <label>Minimum Shelf Life In Days</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>More_Than_90_Days_Past_Due__c</fullName>
        <label>More Than 90 Days Past Due</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Next_Credit_Check_Date__c</fullName>
        <description>Date of the next Credit review date.  If the previous check date is updated, this will change based on risk profile information.</description>
        <inlineHelpText>Date of the next credit review. May be affected by the customer&apos;s risk profile.</inlineHelpText>
        <label>Next Credit Check Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Additional description and notes about this customer</description>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Oldest_Invoice_Age__c</fullName>
        <label>Oldest Invoice Age</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Credits__c</fullName>
        <description>Total of all open credit memos amount of credit</description>
        <inlineHelpText>Total amount from all open credit memos.</inlineHelpText>
        <label>Open Credits</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Invoices__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total of all open invoices balance due</description>
        <inlineHelpText>Balance due from all open invoices.</inlineHelpText>
        <label>Open Invoices</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Past_Due__c</fullName>
        <description>Total of all invoices that are past due with a balance</description>
        <label>Open Past Due</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Sales_Orders__c</fullName>
        <description>Total of all open sales order lines extended back order value</description>
        <label>Open Sales Orders</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Quantity_Factor_At__c</fullName>
        <description>Product Field to use when validating Sales Order lines for quantity exceptions.</description>
        <inlineHelpText>Options may include Layer and Pallet. Select the checkbox to  validate Sales Order lines for quantity exceptions. Go to the Product page to manage the order quantity settings.</inlineHelpText>
        <label>Order Quantity Factor At</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Layer</fullName>
                </value>
                <value>
                    <fullName>Pallet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Outstanding_Balance2__c</fullName>
        <label>Credit Extended</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pallet_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This product will give Pallet information on ship to customer. This information could be used later in Sales Orders and Shipments to calculate weight with pallet information.</description>
        <inlineHelpText>The product provides pallet information which may be used in Sales Orders and Shipments to calculate weight.</inlineHelpText>
        <label>Pallet Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Ship To Customers</relationshipLabel>
        <relationshipName>Customers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Paper_Invoice_Indicator__c</fullName>
        <label>Paper Invoice Indicator</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Customer_Identifier__c</fullName>
        <description>parent ID</description>
        <label>Parent Customer Identifier</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Customer</label>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>Related Customers</relationshipLabel>
        <relationshipName>Customers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Method_G__c</fullName>
        <description>Payment method for this customer</description>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Payment_Method</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <description>Payment method for this customer</description>
        <label>DEPRECATED</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>EFT</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Debit Card</fullName>
                </value>
                <value>
                    <fullName>Wire</fullName>
                </value>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Term_Identifier__c</fullName>
        <description>Allow data load to match terms</description>
        <label>Payment Term Identifier</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Term__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Payment terms for this business partner</description>
        <label>Payment Terms</label>
        <referenceTo>Payment_Term__c</referenceTo>
        <relationshipLabel>Customers</relationshipLabel>
        <relationshipName>Customers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <description>Indicates how customer will pay for orders C = Check D = Draft 1,1 R = EDI Remit</description>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>C</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>R</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_Shipping_Method__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Preferred Shipping Method</label>
        <referenceTo>Shipping_Method__c</referenceTo>
        <relationshipLabel>Customers</relationshipLabel>
        <relationshipName>Customers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Previous_Credit_Check_Date__c</fullName>
        <description>Indicates the date when the last credit check was performed. This can be used in reports to identify when the next credit approval is required.</description>
        <inlineHelpText>Indicates the date when the last credit check was performed. The date can be used in reports to identify when the next credit approval is required.</inlineHelpText>
        <label>Previous Credit Check Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Price_Determination_Date__c</fullName>
        <label>Price Determination Date</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Order Date</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Shipment Date</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pricebook__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Pricebooks are associated with the Sold-to customer (one pricebook per customer).</inlineHelpText>
        <label>Pricebook</label>
        <referenceTo>Pricebook__c</referenceTo>
        <relationshipLabel>Customers</relationshipLabel>
        <relationshipName>Customers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>Priority of the business partner</description>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ready__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Ready</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <description>Used while data load is running to set record type</description>
        <label>Record Type Name</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <inlineHelpText>The sales region in which the selected customer is located.</inlineHelpText>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>West Coast</fullName>
                </value>
                <value>
                    <fullName>Midwest</fullName>
                </value>
                <value>
                    <fullName>Mountain</fullName>
                </value>
                <value>
                    <fullName>New England</fullName>
                </value>
                <value>
                    <fullName>Northeast</fullName>
                </value>
                <value>
                    <fullName>Southeast</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reporting_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Group of customers for Planning and Reporting</description>
        <label>Reporting Customer</label>
        <referenceTo>Reporting_Customer__c</referenceTo>
        <relationshipLabel>Customers</relationshipLabel>
        <relationshipName>Customers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Risk_Class__c</fullName>
        <inlineHelpText>Risk class can be assigned to a top parent customer. The class is associated with a credit tolerance, which can be updated by designated user profiles. Credit rules and risk tolerances can be managed from the Credit Profile Edit link on the Company page.</inlineHelpText>
        <label>Risk Class</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>R</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Tax_Rate__c</fullName>
        <label>Sales Tax Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ship_From_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For Ship-To Customers Only</description>
        <label>Ship From Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Ship-to Customers</relationshipLabel>
        <relationshipName>Customers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Skip_Substitution__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box to skip the product substitution on a sales order line. (Currently applicable to sold-to customers only.)</description>
        <label>Skip Substitution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>If(ISBLANK(Customer_Street__c)&amp;&amp; !ISBLANK(Address__c) , Address__r.BillingState, Customer_State__c)</formula>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of this customer: Approved,Under Consideration,Pending Approval,Not Approved,Inactive</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <formula>If(ISBLANK(Customer_Street__c), Address__r.BillingStreet, Customer_Street__c  &amp; IF(ISBLANK(Customer_Street_1__c), &quot;&quot;,  BR() &amp; Customer_Street_1__c) &amp; IF(ISBLANK(Customer_Street_2__c), &quot;&quot;,  BR() &amp; Customer_Street_2__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Exemption_Number__c</fullName>
        <label>Tax Exemption Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_Parent_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The ultimate parent record for a set of related customers</description>
        <label>Top Parent Customer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Customer__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Corporate_Parent</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>Customers (Top Parent Customer)</relationshipLabel>
        <relationshipName>TopCustomer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Due__c</fullName>
        <formula>Open_Invoices__c +  Open_Credits__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Track_Install_Base__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Track Install Base</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Uninvoiced_Shipments__c</fullName>
        <description>Amount from sales orders that have been fulfilled but not yet invoiced</description>
        <label>Uninvoiced Fulfillments</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Use_Fixed_Pricing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the best bracket price is chosen as the price. It overrides the weight calculation.</description>
        <label>Use Fixed Pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VAT_ID__c</fullName>
        <label>VAT ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Managed_Inventory__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates this customer has vendor managed inventory</description>
        <label>Vendor Managed Inventory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X1_30_Days_Past_Due__c</fullName>
        <label>1-30 Days Past Due</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X31_60_Days_Past_Due__c</fullName>
        <label>31-60 Days Past Due</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X61_90_Days_Past_Due__c</fullName>
        <label>61-90 Days Past Due</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>